Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Group__c/Selenium_Test_Group__c.object-meta.xml
<CustomObject>
    <label>Selenium Test Group</label>
    <nameField>
        <label>Selenium Test Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selenium Test Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>