Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Group__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Selenium Test Groups</relationshipLabel>
    <relationshipName>Selenium_Test_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>