Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Group__c/fields/Run_Sequentially__c.field-meta.xml
<CustomField>
    <fullName>Run_Sequentially__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, tests runs will be executed in sequence, one after another, instead of doing it in parallel</inlineHelpText>
    <label>Run Sequentially</label>
    <type>Checkbox</type>
</CustomField>