Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Group__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed with Errors</fullName>
            </value>
            <value>
                <fullName>Completed Successfully</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>