Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Group__c/fields/Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon__c</fullName>
    <formula>IMAGE( 
CASE(TEXT(Status__c), 

&apos;Completed with errors&apos;, &apos;/resource/&apos; &amp; IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/warning16.png&apos;,

&apos;Completed successfully&apos;, &apos;/resource/&apos; &amp; IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/confirm16.png&apos;,

&apos;Completed with warnings&apos;, &apos;/resource/&apos; &amp; IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/confirm16.png&apos;,


&apos;In Progress&apos;, &apos;/resource/&apos; &amp; IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/loading.gif&apos;,

&apos;Queued&apos;, &apos;/resource/&apos; &amp; IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/loading.gif&apos;,

&apos;/s.gif&apos;),

TEXT(Status__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>