Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Group__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>If “Regression Test” or “User Story Test” is selected, then all Credentials associated to that Test Group must be linked to the same environment.</description>
    <inlineHelpText>If “Regression Test” or “User Story Test” is selected, then all Credentials associated to that Test Group must be linked to the same environment.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Regression Test</fullName>
            </value>
            <value>
                <fullName>User Story Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>