Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Group__c/validationRules/Environment_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Environment_Required</fullName>
    <active>true</active>
    <description>If the Type value is equal to &quot;Regression Test&quot; or &quot;User Story Test&quot;, the Environment field must have a value.</description>
    <errorConditionFormula>AND( ISBLANK( Environment__c ), OR(ISPICKVAL( Type__c , &quot;Regression Test&quot;), ISPICKVAL( Type__c , &quot;User Story Test&quot;)))</errorConditionFormula>
    <errorDisplayField>Environment__c</errorDisplayField>
    <errorMessage>The Environment field is required if the Type is &quot;User Story Test&quot; or &quot;Regression Test&quot;.</errorMessage>
</ValidationRule>