Dummy_Package_for_scratch_org/main/default/objects/Selenium_Test_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Selenium_Settings__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>